--- a/routing/package.json
+++ b/routing/package.json
@@ -2,9 +2,9 @@
   "name": "routing",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "getpost.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node getpost.js"
   },
   "author": "",
   "license": "ISC",
