--- a/Case Study FSD/PixoGram/package.json
+++ b/Case Study FSD/PixoGram/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pixogram",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -22,5 +21,7 @@
     "nodemon": "^2.0.6",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
-  }
+  },
+  "devDependencies": {},
+  "description": ""
 }
