--- a/Case Study FSD/PixoGram/package.json
+++ b/Case Study FSD/PixoGram/package.json
@@ -1,27 +1,28 @@
 {
   "name": "pixogram",
-  "version": "1.0.0",
-  "main": "app.js",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
     "start": "node app.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.0",
-    "cookie-parser": "^1.4.5",
-    "debug": "^4.2.0",
-    "ejs": "^3.1.5",
-    "express": "^4.17.1",
-    "http-error": "0.0.6",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "ejs": "~2.6.1",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.11",
-    "morgan": "^1.10.0",
+    "mongoose": "^5.10.9",
+    "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "nodemon": "^2.0.6",
+    "nodemon": "^2.0.5",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
+  "main": "app.js",
+  "author": "",
+  "license": "ISC",
   "devDependencies": {},
   "description": ""
 }
